fix: handle remote error, doc: examples

--- a/exampleSite/layouts/index.html
+++ b/exampleSite/layouts/index.html
@@ -9,6 +9,28 @@
 <body>
 <h1>{{ .Title | site.Home.RenderString }}</h1>
 {{ .Content }}
-{{- partial "get-resource" (dict "src" "style.css" "ctx" . "errorLevel" "warning") }}
+{{- $page := partial "get-resource" (dict "src" "test.yaml" "ctx" . "errorLevel" "warning") }}
+{{- $site := partial "get-resource" (dict "src" "style.css" "ctx" . "errorLevel" "warning") }}
+{{- $remote := partial "get-resource" (dict "src" "https://picsum.photos/100/50" "ctx" . "errorLevel" "warning") }}
+
+<h2>Examples</h2>
+<dl>
+    <dt>Page resource</dt>
+    <dd>Get 'test.yaml' in the root of the content folder: {{ $page }}</dd>
+    <dt>Site resource</dt>
+    <dd>Get 'style.css' in the assets folder: {{ $site }}</dd>
+    <dt>Remote resource</dt>
+    <dd>Get an image from 'https://picsum.photos/100/50': {{ $remote }}</dd>
+</dl>
+<h2>Missing resources</h2>
+<p>Depending on the error level the function ignores them, warns about them or breaks the build. The tests here lead to empty variables and <code>get-resource</code> writes a warning to the console:</p>
+{{- $missing := partial "get-resource" (dict "src" "missing.yaml" "ctx" . "errorLevel" "warning") }}
+{{- $remotemissing := partial "get-resource" (dict "src" "https://picsum/100/50" "ctx" . "errorLevel" "warning") }}
+<dl>
+    <dt>Local resource (for page or site)</dt>
+    <dd>Get 'missing.yaml': {{ $missing }}</dd>
+    <dt>Remote resource</dt>
+    <dd>Get an image from 'https://picsum/100/50': {{ $remotemissing }}</dd>
+</dl>
 </body>
 </html>
