--- a/exampleSite/layouts/index.html
+++ b/exampleSite/layouts/index.html
@@ -10,7 +10,7 @@
 <h1>{{ .Title | site.Home.RenderString }}</h1>
 {{ .Content }}
 {{- readFile "get-resource.md" | site.Home.RenderString }}
-{{- $page := partial "resource/func/get" (dict "url" (urls.Parse "test.yaml") "ctx" . "errorLevel" "warning") }}
+{{- $page := partial "resource/func/get" (dict "url" (urls.Parse "test?q=empty") "ctx" . "errorLevel" "warning") }}
 {{- $site := partial "resource/func/get" (dict "url" (urls.Parse "style.css") "ctx" . "errorLevel" "warning") }}
 {{- $remote := partial "resource/func/get" (dict "url" (urls.Parse "https://picsum.photos/100/50") "ctx" . "errorLevel" "warning") }}
 {{- $data := partial "resource/func/get-with-params" (dict "url" (urls.Parse "data.yaml") "ctx" . "errorLevel" "warning") }}
@@ -18,7 +18,7 @@
 <h3>Demonstration</h3>
 <dl>
     <dt>Page resource</dt>
-    <dd>Get 'test.yaml' in the root of the content folder: {{ $page }}</dd>
+    <dd>Get 'test?q=empty' in the root of the content folder: {{ $page }}</dd>
     <dt>Site resource</dt>
     <dd>Get 'style.css' in the assets folder: {{ $site }}</dd>
     <dt>Remote resource</dt>
@@ -28,13 +28,13 @@
 </dl>
 <h3>Missing resources</h3>
 <p>Depending on the error level the function ignores them, warns about them or breaks the build. The tests here lead to empty variables and <code>get-resource</code> writes a warning to the console:</p>
-{{- $missing := partial "resource/func/get" (dict "url" (urls.Parse "missing.yaml") "ctx" . "errorLevel" "warning") }}
+{{- $missing := partial "resource/func/get" (dict "url" (urls.Parse "test-missing.yaml") "ctx" . "errorLevel" "warning") }}
 {{- $remotemissing := partial "resource/func/get" (dict "url" (urls.Parse "https://picsum/100/50") "ctx" . "errorLevel" "warning") }}
 <dl>
     <dt>Local resource (for page or site)</dt>
-    <dd>Get 'missing.yaml': {{ $missing }}</dd>
+    <dd>Get 'test-missing.yaml': {{ $missing }}</dd>
     <dt>Remote resource</dt>
-    <dd>Get an image from 'https://picsum/100/50': {{ $remotemissing }}</dd>
+    <dd>Get an image from (non-existing) 'https://picsum/100/50': {{ $remotemissing }}</dd>
 </dl>
 </body>
 </html>
