--- a/layouts/partials/resource/func/get-with-params.html
+++ b/layouts/partials/resource/func/get-with-params.html
@@ -1,4 +1,4 @@
-{{- $name := "hugo-mod-resource – partial func/resource/get-with-params" }}
+{{- $name := "hugo-mod-resource – func/resource/get-with-params" }}
 
 {{- /* Initialize local variables with the values from the context map */}}
 {{- $url := .url }}
