--- a/layouts/partials/resource/func/get.html
+++ b/layouts/partials/resource/func/get.html
@@ -1,4 +1,4 @@
-{{- $name := "hugo-mod-resource – partial func/resource/get" }}
+{{- $name := "hugo-mod-resource – func/resource/get" }}
 
 {{- /* Initialize local variables with the values from the context map */}}
 {{- $url := .url }}
