test: remove cached

--- a/layouts/partials/resource/func/helper/get-from-data.html
+++ b/layouts/partials/resource/func/helper/get-from-data.html
@@ -7,7 +7,7 @@
     {{- $params := transform.Unmarshal $data }}
     {{- $url := urls.Parse $params.src }} 
     {{- $args := dict "url" $url "ctx" $ctx "errorLevel" $errorLevel }}
-    {{- $r := partialCached "resource/func/get" $args $args }}
+    {{- $r := partial "resource/func/get" $args $args }}
     {{- $map = dict "r" $r "params" $params }}
 {{- end }}
 
