debug: add merge

--- a/layouts/partials/resource/func/helper/get-from-data.html
+++ b/layouts/partials/resource/func/helper/get-from-data.html
@@ -8,7 +8,7 @@
     {{- $url := urls.Parse $params.src }} 
     {{- $args := dict "url" $url "ctx" $ctx "errorLevel" $errorLevel }}
     {{- $r := partial "resource/func/get" $args $args }}
-    {{- $map = dict "r" $r "params" $params }}
+    {{- $map = merge $map (dict "r" $r "params" $params) }}
 {{- end }}
 
 {{- warnf "map: %v" $map }}
