--- a/layouts/partials/resource/func/get-with-params.html
+++ b/layouts/partials/resource/func/get-with-params.html
@@ -14,7 +14,7 @@
             {{- $msg := print $errorMsg ". " . }}
             {{- partial "md-error-msg" (dict "caller" $name "ctx" $ctx "errorMsg" $msg "errorLevel" $errorLevel ) }}
         {{- else }}
-            {{- $map = dict "r" . }} {{- /* no params possible */}}
+            {{- $map = dict "resource" . }} {{- /* no params possible */}}
         {{ end }}
     {{- else }}
         {{- partial "md-error-msg" (dict "caller" $name "ctx" $ctx "errorMsg" $errorMsg "errorLevel" $errorLevel) }}
@@ -26,14 +26,14 @@
         {{ with (partialCached "resource/func/helper/get-from-data" $args $args ) }}
             {{- $map = . }}
         {{ else }}
-            {{- $map = dict "r" . "params" .Params }}
+            {{- $map = dict "resource" . "params" .Params }}
         {{ end }}
     {{- else }}
         {{- $map = partial "resource/func/helper/page-fallback-with-params" (dict "path" $path "ctx" $ctx) }}
     {{- end }}    
     {{- if not $map }}
         {{- with resources.Get $url.Path }} {{- /* Site */}}
-            {{- $map = dict "r" . }} {{- /* no params possible */}}
+            {{- $map = dict "resource" . }} {{- /* no params possible */}}
         {{- else }} {{- /* $map is still empty */}}
             {{- partial "md-error-msg" (dict "caller" $name "ctx" $ctx "errorMsg" $errorMsg "errorLevel" $errorLevel) }}
         {{- end }}   
