fix: key resource

--- a/layouts/partials/resource/func/helper/page-fallback-with-params.html
+++ b/layouts/partials/resource/func/helper/page-fallback-with-params.html
@@ -4,10 +4,10 @@
 {{ $map := "" }}
 {{ with $ctx.Page.Parent }}
     {{ with .Page.Resources.GetMatch $path }}
-        {{ with (partialCached "resource/func/helper/get-from-data" . . ) }}
+        {{ with (partial "resource/func/helper/get-from-data" . ) }}
             {{ $map = . }}
         {{ else }}
-            {{ $map = dict "r" . }}
+            {{ $map = dict "resource" . }}
         {{ end }}
     {{ end }}
 {{ end }}
