feat: globbing for local path

--- a/layouts/partials/resource/func/helper/page-fallback.html
+++ b/layouts/partials/resource/func/helper/page-fallback.html
@@ -3,7 +3,7 @@
  
 {{- $resource := "" }}
 {{- with $ctx.Page.Parent }}
-    {{- with .Page.Resources.GetMatch $path }}
+    {{- with .Page.Resources.GetMatch (print "*" $path "*") }}
         {{- $resource = . }}
     {{- end }}
 {{- end }}
