--- a/layouts/partials/resource/func/helper/page-fallback-with-params.html
+++ b/layouts/partials/resource/func/helper/page-fallback-with-params.html
@@ -3,7 +3,7 @@
  
 {{ $map := "" }}
 {{ with $ctx.Page.Parent }}
-    {{ with .Page.Resources.GetMatch $path }}
+    {{ with .Page.Resources.GetMatch (print "*" $path "*") }}
         {{ with (partial "resource/func/helper/get-from-data" . ) }}
             {{ $map = . }}
         {{ else }}
