chore: rename partial folder

--- a/exampleSite/layouts/index.html
+++ b/exampleSite/layouts/index.html
@@ -10,31 +10,31 @@
 <h1>{{ .Title | site.Home.RenderString }}</h1>
 {{ .Content }}
 {{- readFile "get-resource.md" | site.Home.RenderString }}
-{{- $page := partial "resource/func/get" (dict "url" (urls.Parse "test?q=empty") "ctx" . "errorLevel" "warning") }}
-{{- $site := partial "resource/func/get" (dict "url" (urls.Parse "style.css") "ctx" . "errorLevel" "warning") }}
-{{- $remote := partial "resource/func/get" (dict "url" (urls.Parse "https://picsum.photos/100/50") "ctx" . "errorLevel" "warning") }}
-{{- $data := partial "resource/func/get-with-params" (dict "url" (urls.Parse "data.yaml") "ctx" . "errorLevel" "warning") }}
+{{- $page := partial "mod-resource/func/get" (dict "url" (urls.Parse "test?q=empty") "ctx" . "errorLevel" "warning") }}
+{{- $site := partial "mod-resource/func/get" (dict "url" (urls.Parse "style.css") "ctx" . "errorLevel" "warning") }}
+{{- $remote := partial "mod-resource/func/get" (dict "url" (urls.Parse "https://picsum.photos/100/50") "ctx" . "errorLevel" "warning") }}
+{{- $data := partial "mod-resource/func/get-with-params" (dict "url" (urls.Parse "data.yaml") "ctx" . "errorLevel" "warning") }}
 
 <h3>Demonstration</h3>
 <dl>
     <dt>Page resource</dt>
-    <dd>Get 'test?q=empty' in the root of the content folder: {{ $page }}</dd>
+    <dd>Get 'test?q=empty' in the root of the content folder: <strong>{{ $page }}</strong></dd>
     <dt>Site resource</dt>
-    <dd>Get 'style.css' in the assets folder: {{ $site }}</dd>
+    <dd>Get 'style.css' in the assets folder: <strong>{{ $site }}</strong></dd>
     <dt>Remote resource</dt>
-    <dd>Get an image from 'https://picsum.photos/100/50': {{ $remote }}</dd>
+    <dd>Get an image from 'https://picsum.photos/100/50': <strong>{{ $remote }}</strong></dd>
     <dt>Resource in data file</dt>
-    <dd>Read 'data.yaml' and get an image from 'https://picsum.photos/100/100': {{ $data }}</dd>
+    <dd>Read 'data.yaml' and get an image from 'https://picsum.photos/100/100': <strong>{{ $data }}</strong></dd>
 </dl>
 <h3>Missing resources</h3>
 <p>Depending on the error level the function ignores them, warns about them or breaks the build. The tests here lead to empty variables and <code>get-resource</code> writes a warning to the console:</p>
-{{- $missing := partial "resource/func/get" (dict "url" (urls.Parse "test-missing.yaml") "ctx" . "errorLevel" "warning") }}
-{{- $remotemissing := partial "resource/func/get" (dict "url" (urls.Parse "https://picsum/100/50") "ctx" . "errorLevel" "warning") }}
+{{- $missing := partial "mod-resource/func/get" (dict "url" (urls.Parse "test-missing.yaml") "ctx" . "errorLevel" "warning") }}
+{{- $remotemissing := partial "mod-resource/func/get" (dict "url" (urls.Parse "https://picsum/100/50") "ctx" . "errorLevel" "warning") }}
 <dl>
     <dt>Local resource (for page or site)</dt>
-    <dd>Get 'test-missing.yaml': {{ $missing }}</dd>
+    <dd>Get 'test-missing.yaml': <strong>{{ $missing }}</strong></dd>
     <dt>Remote resource</dt>
-    <dd>Get an image from (non-existing) 'https://picsum/100/50': {{ $remotemissing }}</dd>
+    <dd>Get an image from (non-existing) 'https://picsum/100/50': <strong>{{ $remotemissing }}</strong></dd>
 </dl>
 </body>
 </html>
