--- a/layouts/partials/mod-resource/func/helper/get-from-data.html
+++ b/layouts/partials/mod-resource/func/helper/get-from-data.html
@@ -7,7 +7,7 @@
     {{- $params := transform.Unmarshal $data }}
     {{- $url := urls.Parse $params.src }} 
     {{- $args := dict "url" $url "ctx" $ctx "errorLevel" $errorLevel }}
-    {{- $resource := partial "resource/func/get" $args $args }}
+    {{- $resource := partial "mod-resource/func/get" $args $args }}
     {{- $map = merge $map (dict "resource" $resource "params" $params) }}
 {{- end }}
 
