fix: error message for missing local resource

--- a/layouts/partials/mod-resource/func/get-with-params.html
+++ b/layouts/partials/mod-resource/func/get-with-params.html
@@ -5,10 +5,11 @@
 {{- $ctx := .ctx }}
 {{- $errorLevel := .errorLevel }}
 
-{{- $errorMsg := printf "Unable to resolve the resource %q" $url.String }}
+
 
 {{- $map := "" }}
 {{- if $url.IsAbs }} {{- /* Remote */}}
+    {{- $errorMsg := printf "Unable to resolve the resource %q" $url.String }}
     {{- with resources.GetRemote $url.String }}
         {{- with .Err }}
             {{- $msg := print $errorMsg ". " . }}
@@ -21,6 +22,7 @@
     {{- end }}
 {{- else }}
     {{- $path := (strings.TrimPrefix "./" $url.Path ) }}
+    {{- $errorMsg := printf "Unable to resolve the resource %q" $path }}
     {{- with $ctx.Page.Resources.GetMatch (print "*" $path "*") }} {{- /* Page */}}
         {{ $args := dict "data" . "ctx" $ctx "errorLevel" $errorLevel }}
         {{ with (partial "mod-resource/func/helper/get-from-data" $args $args ) }}
