--- a/layouts/partials/mod-resource/func/helper/get-from-data.html
+++ b/layouts/partials/mod-resource/func/helper/get-from-data.html
@@ -7,8 +7,9 @@
     {{- $params := transform.Unmarshal $data }}
     {{- $url := urls.Parse $params.src }} 
     {{- $args := dict "url" $url "ctx" $ctx "errorLevel" $errorLevel }}
-    {{- $resource := partial "mod-resource/func/get" $args $args }}
-    {{- $map = merge $map (dict "resource" $resource "params" $params) }}
+    {{- with (partial "mod-resource/func/get" $args $args) }}
+        {{- $map = merge $map (dict "resource" . "params" $params) }}
+    {{- end }}
 {{- end }}
 
 {{- return $map }}
